Ran into a few issues with alignment so basically started over Managed to find a couple of the target fonts

--- a/ChocolatePizza/ChocolatePizza/css/styles.css
+++ b/ChocolatePizza/ChocolatePizza/css/styles.css
@@ -1,46 +1,82 @@
 h1{
     margin-bottom: 0px;
-    margin-top: 50px;
+    margin-top: 20px;
 }
 h6{
     margin-top: 0px;
     display:inline;
 }
 
-body{
+body {
     width: 70%;
-    height:70%;
-    margin:5% auto 5% auto;
-}
-ul
-{
-    font-family: sans-serif;
-    height:100%;
+    height: 70%;
+    margin: 5% auto 5% auto;
+    font-family: "Playfair Display", serif;
 }
 
-ul li
+ul
 {
+/*    font-family: sans-serif;*/
+    height:100%;
 }
+#recipe{
+    column-count:2 ;
+}
+
 #header {
-    font-size: 25px;
-    margin-top: 50px;
+    font-size: 9px;
     display: inline;
+    height:100px;    
+}
+#topic {
+    margin-bottom: 30px;
+    color: rgba(0,0,0,0.5);
+    font-size:12px;
 }
 
 .social{
    display: inline;
+   vertical-align:top;
 }
 
-#logo-head {
+.logo-head {
+    float:unset;
+    position:relative;    
+    font-family: "Yellowtail",cursive;
+    font-weight:bold;
+    font-size:26px;
+    margin:auto 0 10px;
+    height:20px;
+    vertical-align:top;
 }
+.logo {
+    position:relative;
+    color:black;
+    padding-right:5px;
+}
+.logo-bottom {
+    position:relative;    
+    font-family: Playfair Display,serif;
+    font-size:9px;
+    margin-top:10px;
+    margin-bottom:15px;
+}
+
 #main-img{
-    border-top:0px;
+    border-top:15px;
     height:100%;
     width:100%;
 }
+#sup-img{
+    height:auto;
+    width:100%;
+    margin-bottom:20px;
+}
 
 #article{
-    font-size:20px;
+    font-size:16px;
+    font-weight:500;
+    color:rgba(0,0,0,0.7);
     line-height:25px;
     height:750px;
 }
@@ -49,31 +85,39 @@ ul li
     margin-right:10px;
     padding-right:10px;
 }
-.align-right{
-    float:right;
-    margin-left:10px;
+.align-right {
+    float: right;
+    margin-left: 0px;
+    font-family: "Dekko",cursive;
+    color: rgba(0,0,0,0.7);
+}
+.align-left {
+    float: left;
+    margin-right: 0px;
+    width: 240px;
+    font-family: "Dekko",cursive;
+    color: rgba(0,0,0,0.7);
 }
 #recipe {
     position: relative;
-    text-align:left;
-    column-count:2;
+    text-align: left;
+    column-count: 2;
+    font-family: "Dekko",cursive;
+    font-size: 18px;
+    color:rgba(0,0,0,0.7);
 }
 
-
-
 .overlay{
-
+    
     position: relative;
     bottom: auto;
     background: rgb(0,0,0);
     background: rgba(0,0,0,0);
     color: black;
-    width: 90%;
-    height:40%;
+    width: 100%;
+    height:60%;
     padding: 20px;
-    transform: translate(5%, -127%);
-    font-size:20px;
-    font-family:sans-serif;
+    transform: translate(0%, -56%);
 }
 #article{
     text-indent: 20px;
